# OpenGL_test_4.6_a

./: OpenGL_test_4.6_a.sln  Report20200311-1713.diagsession  Report20200311-1731.diagsession  Report20200311-1735.diagsession  Report20200311-1739.diagsession  Report20200311-2010.diagsession  Report20200312-0141.diagsession  Report20200313-1857.diagsession  Report20200331-0126 (2).diagsession
OpenGL_test_4.6_a/: CMakeLists.txt  CMakeSettings.json  ColorRGB.h  EdgeGeometryShader.glsl  GLTFLoader.cpp  GLTFLoader.h  LineFragmentShader.glsl  LineVertexShader.glsl  Math.h  Matrix.h  Mesh.h  MeshFragmentShader.glsl  MeshGeometryShader.glsl  MeshLoader.cpp  MeshLoader.h  MeshVertexShader.glsl  OpenGLPrimitive.h  OpenGL_test_4.6_a.cpp  OpenGL_test_4.6_a.vcxproj  OpenGL_test_4.6_a.vcxproj.filters  SphereTesselationControlShader.glsl  SphereTesselationControlShader2.glsl  SphereTesselationEvaluationShader.glsl  SphereTesselationEvaluationShader2.glsl  SphereTesselationFragmentShader.glsl  SphereTesselationVertexShader.glsl  Todo.txt  Vector.h  WindowsDebugOutputRedirect.cpp  main.cpp
OpenGL_test_4.6_a/Backend/: Backend.cpp  BackendContext.cpp  BackendContext.h  BackendGraphicPrimitive.cpp  BackendGraphicPrimitive.h  BackendMesh.h  BackendPatch.cpp  BackendPatch.h  BackendShaderProgram.cpp  BackendShaderProgram.h  BackendStandardShaderProgram.cpp  BackendStandardShaderProgram.h  BackendTesselationShaderProgram.cpp  BackendTesselationShaderProgram.h  BackendViewInterface.cpp  BackendViewInterface.h  BackendWindow.cpp  BackendWindow.h  CMakeLists.txt  ViewInterface.cpp  ViewInterface.h
OpenGL_test_4.6_a/Documentation/: CMakeLists.txt
OpenGL_test_4.6_a/Geometry/: BezierPatch.h  CMakeLists.txt  Mesh.cpp  Mesh.h  Patch.h
OpenGL_test_4.6_a/IO/: CMakeLists.txt  MeshLoader.cpp  MeshLoader.h
OpenGL_test_4.6_a/Main/: CMakeLists.txt  main.cpp
OpenGL_test_4.6_a/Math/: CMakeLists.txt  Math.cpp  Matrix.h  Vector.h
OpenGL_test_4.6_a/OpenGLBackend/: CMakeLists.txt  OpenGLBackend.cpp  OpenGLBackend.h  OpenGLUtilities.cpp  OpenGLUtilities.h
OpenGL_test_4.6_a/Scene/: Camera.h  PointLight.h  Scene.cpp  Scene.h  SceneObject.h
OpenGL_test_4.6_a/Style/: CMakeLists.txt  ColorRGB.cpp  ColorRGB.h  ColorRGBA.cpp  ColorRGBA.h
OpenGL_test_4.6_a/Utilities/: CMakeLists.txt  Exception.h  Misc.h  UninitializedAllocator.h
OpenGL_test_4.6_a/View/: CMakeLists.txt  View.cpp  View.h
OpenGL_test_4.6_a/WindowsBackend/: CMakeLists.txt  WindowsDebugOutputRedirect.cpp  WindowsDebugOutputRedirect.h
OpenGL_test_4.6_a/shaders/: BezierShaderProgram.glsl  (+12 more)
(+139 files in other folders)
